# cbuddy

./: .env.example  .gitignore  README.md  README_CN.md  install.sh  pyproject.toml  uninstall.sh
src/agent_hotline/: __main__.py  server.py
src/cbuddy/: __main__.py  server.py  tty.py
src/walkcode/: __main__.py  config.py  i18n.py  server.py  state.py  tty.py
tests/: test_e2e.py  test_server.py  test_state.py  test_tty.py
